# bounty-infra

./: .gitignore  CLAUDE.md  README.md
.ai/: next-steps.md  project.yml
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-image.yml  ci.yml  dependabot.yml  deploy-infra.yaml  deploy-infra.yml  deploy.yml  destroy.yml  oidc-debug.yml  plan-infra.yml  pr-title.yml  ruleset-drift.yml  run-scan.yml  scanner-pipeline.yml  test_oidc.yml
bootstrap/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
compute/: main.tf  outputs.tf
compute/scripts/: user_data.sh
docs/: hardening_roadmap.md  roe_operator_runbook.md
infra/: backend.tf  main.tf  outputs.tf  scan-vm-userdata.sh.tftpl  variables.tf
sprints/DC_devcontainer/: sprint_plan.md
sprints/S0_governance_hardening/: sprint_plan.md
sprints/S1_scanner_security_core/: sprint_plan.md
sprints/SC_scope_core_extraction/: sprint_plan.md
sprints/SE_egress_migration/: sprint_plan.md
sprints/SW_way_of_working/: sprint_plan.md  task5_session6_findings.md
src/: Dockerfile  pyproject.toml  scanner.py
src/bounty_scanner/: roe.py  scanner.py
src/tests/: test_roe.py  test_scanner.py
