[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "bounty-scanner"
version = "0.1.0"
description = "Agentic Vulnerability Scanning Pipeline"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=0.1.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0"
]

[tool.hatch.envs.default]
# Your production-like environment (used by the Dockerfile)
dependencies = []

[tool.hatch.envs.lint]
# Environment for Ruff and Bandit
dependencies = [
    "ruff",
    "bandit",
]
[tool.hatch.envs.lint.scripts]
heck = [
    "ruff check bounty_scanner/",
    "ruff format --check bounty_scanner/",
    "bandit -r bounty_scanner/"
]
fmt = [
    "ruff format bounty_scanner/",
    "ruff check --fix bounty_scanner/"
]

[tool.hatch.envs.test]
# Environment for Pytest
dependencies = [
    "pytest",
    "pytest-mock",
]
[tool.hatch.envs.test.scripts]
run = "pytest tests/"

[tool.hatch.build.targets.wheel]
packages = ["bounty_scanner"]